--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -101,8 +101,8 @@ Shorthand: `l`
 === Editing a person : `edit` `Since v1.0`
 
 Edits an existing person in the address book. +
-Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [c/POSTALCODE] [t/TAG]...` +
-Shorthand: `e INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [c/POSTALCODE] [t/TAG]...`
+Format: `edit INDEX [n/NAME] [p/ student/(STUDENT_NUMBER) parent/(PARENT_NUMBER)] [e/EMAIL] [a/ADDRESS] [c/POSTALCODE] [t/TAG]...` +
+Shorthand: `e INDEX [n/NAME] [p/ student/(STUDENT_NUMBER) parent/(PARENT_NUMBER)] [e/EMAIL] [a/ADDRESS] [c/POSTALCODE] [t/TAG]...`
 
 ****
 * Edits the person at the specified `INDEX`. The index refers to the index number shown in the last person listing. The index *must be a positive integer* 1, 2, 3, ...
@@ -114,12 +114,12 @@ Shorthand: `e INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [c/POSTALCODE] [t/T
 
 Examples:
 
-* `edit 1 p/91234567 e/johndoe@example.com c/309428` +
-Edits the phone number, email address and postal code of the 1st person to be `91234567`, `johndoe@example.com` and `309428` respectively.
+* `edit 1 p/ parent/91234567 e/johndoe@example.com c/309428` +
+Edits the parent phone number, email address and postal code of the 1st person to be `91234567`, `johndoe@example.com` and `309428` respectively.
 * `edit 2 n/Betsy Crower t/` +
 Edits the name of the 2nd person to be `Betsy Crower` and clears all existing tags.
-* `e 1 p/91234567 e/johndoe@example.com` +
-Edits the phone number and email address of the 1st person to be `91234567` and `johndoe@example.com` respectively.
+* `e 1 p/ student/91234567 parent/91242271 e/johndoe@example.com` +
+Edits the student and parent phone number, and email address of the 1st person to be `91234567`, `91242271` and `johndoe@example.com` respectively.
 * `e 2 n/Betsy Crower t/` +
 Edits the name of the 2nd person to be `Betsy Crower` and clears all existing tags.
 
