DeveloperGuide.adoc: Update NFRs and Product Surveys

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1397,6 +1397,8 @@ Use case ends.
 .  A user with sufficient proficiency in English to understand addressbook commands and instructions.
 .  Should be able to hold up to 100 tags per person.
 .  The system should respond within five seconds.
+.  The system should be able to store at least 1000 histories of a user.
+.  The system should be able to store at least 1000 contacts.
 
 {More to be added}
 
@@ -1457,14 +1459,42 @@ Travis_CI is a hosted, distributed continuous integration service used to build 
 
 *Product Name*
 
-Author: ...
+.*Address Book*, reviewed by Pleathora Kelly P.
+|===
+|Pros |Cons
 
-Pros:
+|Easy to store data of contacts
+|Need to enter data in manually
 
-* ...
-* ...
+|Can edit details of contacts easily using Command Line Interface(CLI)
+|No option for Graphical User Interface(GUI) editing
+|===
 
-Cons:
+.*LocationFinder Address Book*, reviewed by Matthew Ryan
+|===
+|Pros |Cons
 
-* ...
-* ...
+|Easy to use
+|
+
+|Interface design is clean and sleek
+|Cannot customise the design to my needs/favourite colour
+
+|Sort function is intuitive and fast - sorts my contacts in an instant
+|Does not allow automatic sorting once contacts are stored
+
+|===
+
+.*Number One Address Book*, reviewed by Jessabel Louis & Maryjane O. Brian
+|===
+|Pros |Cons
+
+|Colour of interface is great
+|Cannot personalise to fit my mood
+
+|Easy to manage a contact list
+|Does not allow adding in other fields that I need in the addressbook
+
+|Contact list on starter page is shown clearly - all contacts can be seen with the scroller
+|Details of person in contact list cannot be edited according to my needs
+|===
