DeveloperGuide.adoc: Update introductions

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -16,18 +16,20 @@ By: `CS2103AUG2017 T16-B2`      Since: `SEP 2017`      Licence: `MIT`
 
 == Introduction
 
-Welcome to 'cherBook, the address book for teachers. This address book application manages and displays student's stats. +
-Some feature of this address book includes:
+Welcome to 'cherBook, the address book for Teachers. This address book application manages and displays students' academic grades with relevant statistics. +
+Some features of this address book includes:
 
 ****
-* Displays all information of any student for easy reference.
-* Statatical graph based on the grades of the list generated.
+* Displaying information of any student for easy reference.
+* Statistical graph generated based on the grades of each student.
 ****
 
 This guide provides information of the software architecture and the API used in this application. This guide is targeted at software developers, be it amateur or professional. +
 You can implement your own features or improve on the existing code base to suit your own needs, scope and context.
 
 == Setting up
+
+This section guides you on how to setup a suitable developer environment on intelliJ for developing cherBook.
 
 === Prerequisites
 
@@ -1497,7 +1499,6 @@ Travis_CI is a hosted, distributed continuous integration service used to build 
 
 |Sort function is intuitive and fast - sorts my contacts in an instant
 |Does not allow automatic sorting once contacts are stored
-
 |===
 
 .*Number One Address Book*, reviewed by Jessabel Louis & Maryjane O. Brian
